# NuSiF_project

./: ._CMakeLists.txt  ._src  ._tests  CMakeLists.txt
config/: dcavity3D.par
src/: ._Array.hh  ._CGSolver.cc  ._CGSolver.hh  ._CMakeLists.txt  ._Debug.cc  ._Debug.hh  ._FileReader.cc  ._FileReader.hh  ._FluidSimulator.cc  ._FluidSimulator.hh  ._FluidSimulator3D.cc  ._FluidSimulator3D.hh  ._GrayScaleImage.cc  ._GrayScaleImage.hh  ._MultigridSolver.cc  ._MultigridSolver.hh  ._MultigridTest.cc  ._RedBlackSORSolver.cc  ._RedBlackSORSolver.hh  ._SORSolver.cc  ._SORSolver.hh  ._SORSolver3D.cc  ._SORSolver3D.hh  ._Solver.cc  ._Solver.hh  ._StaggeredGrid.cc  ._StaggeredGrid.hh  ._StaggeredGrid3D.cc  ._StaggeredGrid3D.hh  ._Types.hh  ._VTKWriter.cc  ._VTKWriter.hh  ._VTKWriter3D.cc  ._VTKWriter3D.hh  ._backstep.par  ._cylinder.par  ._dcavity.par  ._dcavity3D.par  ._hydrostatic.par  ._lodepng.cc  (+52 more)
tests/: ._ArrayTest.cc  ._CGTest.cc  ._CMakeLists.txt  ._DerivativeTest.cc  ._DerivativeTestInput.par  ._FileReaderTest.cc  ._FileReaderTestInput.txt  ._MultigridTest.cc  ._RedBlackSORTest.cc  ._SORTest.cc  ._SORTest3D.cc  ._poisson.par  ArrayTest.cc  CGTest.cc  CGTest3D.cc  CMakeLists.txt  DerivativeTest.cc  DerivativeTest3D.cc  DerivativeTest3DInput.par  DerivativeTestInput.par  FileReaderTest.cc  FileReaderTestInput.txt  MultigridTest.cc  PCGTest.cc  RedBlackSORTest.cc  RedBlackSORTest3D.cc  SORTest.cc  SORTest3D.cc  poisson3D.par
